[wayland][kwin] aVsyncTimestamp <= tickStart assert in nsRefreshDriver
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox139 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
I see this assert fail intermittently in my debug builds, only on Wayland. Might be related to the weird wayland vsync stuff Olli was seeing?
Updated•8 months ago
|
Comment 1•8 months ago
|
||
Yes, that's possible. Can you try to capture a log for it? MOZ_LOG="WidgetVSync:5 WidgetWayland:5"
Thanks.
| Assignee | ||
Comment 2•8 months ago
|
||
I just caught this, here's the log I could rescue (very verbose)
Comment 3•7 months ago
|
||
Thanks. The log looks correct, ale time stamps from Wayland backend are in row. I'd expect a problem when we have "WaylandVsyncSource::EmulatedWindowCallback" in the log but all callbacks are from compositor.
Comment 4•7 months ago
|
||
I don't think it's related - the assert triggers when system time is changed. It's not related to our event/vsync code but rather system config. I've seen that on X11 too.
Comment 5•7 months ago
|
||
The assertion may be adjusted for Wayland - we can't expect any relation between Wayland event timestamp and system monotonic time.
Updated•7 months ago
|
| Assignee | ||
Comment 6•7 months ago
|
||
Hmm, I only see this on KWin, and not when system time changes necessarily... But ok, maybe we can just suppress it on wayland. It's also not a new problem
| Assignee | ||
Comment 7•7 months ago
|
||
Updated•7 months ago
|
Comment 9•7 months ago
|
||
| bugherder | ||
Updated•7 months ago
|
Description
•