Bug 1958043 - Weaken vsync timestamp assert on wayland. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D244570